[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/Ship.gd" type="Script" id=1]
[ext_resource path="res://assets/images/ship.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Ship" type="Node2D" index="0"]

script = ExtResource( 1 )
playable = true

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
region_rect = Rect2( 928, 0, 32, 32 )

[node name="Timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.8
one_shot = true
autostart = false
_sections_unfolded = [ "Pause" ]

[node name="ShipArea" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 26
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipArea" index="0"]

shape = SubResource( 1 )

[node name="RespawnTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="IframeTimeout" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="area_entered" from="ShipArea" to="." method="_on_Area2D_area_entered"]

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]


